YugaByteDB openshift deployment/ybmaster-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: yb-master
  namespace: yugabyte
spec:
  serviceName: yb-masters
  replicas: 3
  selector:
    matchLabels:
      app: yb-master
  template:
    metadata:
      labels:
        app: yb-master
    spec:
      serviceAccountName: yugabyte-admin
      containers:
      - name: yb-master
        image: yugabytedb/yugabyte:latest
        command:
        - "/home/yugabyte/bin/yb-master"
        - "--fs_data_dirs=/mnt/data"
        - "--rpc_bind_addresses=$(POD_IP):7100"
        - "--webserver_interface=$(POD_IP)"
        - "--master_addresses=yb-master-0.yb-masters.yugabyte.svc.cluster.local:7100,yb-master-1.yb-masters.yugabyte.svc.cluster.local:7100,yb-master-2.yb-masters.yugabyte.svc.cluster.local:7100"
        - "--replication_factor=3"
        ports:
        - containerPort: 7000
          name: ui
        - containerPort: 7100
          name: rpc-port
        volumeMounts:
        - name: datadir
          mountPath: /mnt/data
        readinessProbe:
          tcpSocket:
            port: 7100
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 7100
          initialDelaySeconds: 15
          periodSeconds: 10
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: yb-master-data-volume-yb-master-$(ORDINAL)
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
