YugaByteDB openshift deployment/ybtserver-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: yb-tserver
  namespace: yugabyte
spec:
  serviceName: yb-tservers
  replicas: 3
  selector:
    matchLabels:
      app: yb-tserver
  template:
    metadata:
      labels:
        app: yb-tserver
    spec:
      serviceAccountName: yugabyte-admin
      containers:
      - name: yb-tserver
        image: yugabytedb/yugabyte:latest
        command:
        - "/home/yugabyte/bin/yb-tserver"
        - "--fs_data_dirs=/mnt/data"
        - "--rpc_bind_addresses=$(POD_IP):9100"
        - "--webserver_interface=$(POD_IP)"
        - "--tserver_master_addrs=yb-master-0.yb-masters.yugabyte.svc.cluster.local:7100,yb-master-1.yb-masters.yugabyte.svc.cluster.local:7100,yb-master-2.yb-masters.yugabyte.svc.cluster.local:7100"
        - "--enable_ysql=true"
        ports:
        - containerPort: 9000
          name: ui
        - containerPort: 9100
          name: rpc-port
        - containerPort: 9042
          name: cassandra
        - containerPort: 6379
          name: redis
        - containerPort: 5433
          name: postgres
        volumeMounts:
        - name: datadir
          mountPath: /mnt/data
        readinessProbe:
          tcpSocket:
            port: 9100
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9100
          initialDelaySeconds: 15
          periodSeconds: 10
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: yb-tserver-data-volume-yb-tserver-$(ORDINAL)
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
