YugaByteDB openshift deployment/yugabytedb-masterservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: yb-masters
  namespace: yugabyte
  labels:
    app: yb-master
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 7000
  - name: rpc-port
    port: 7100
  selector:
    app: yb-master
---
apiVersion: v1
kind: Service
metadata:
  name: yb-master-ui
  namespace: yugabyte
  labels:
    app: yb-master
spec:
  ports:
  - name: ui
    port: 7000
    targetPort: 7000
  selector:
    app: yb-master
  type: ClusterIP
