YugaByteDB openshift deployment/yugabytedb-tservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: yb-tservers
  namespace: yugabyte
  labels:
    app: yb-tserver
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 9000
  - name: rpc-port
    port: 9100
  - name: cassandra
    port: 9042
  - name: redis
    port: 6379
  - name: postgres
    port: 5433
  selector:
    app: yb-tserver
---
apiVersion: v1
kind: Service
metadata:
  name: yb-tserver-ui
  namespace: yugabyte
  labels:
    app: yb-tserver
spec:
  ports:
  - name: ui
    port: 9000
    targetPort: 9000
  selector:
    app: yb-tserver
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: yb-tserver-service
  namespace: yugabyte
  labels:
    app: yb-tserver
spec:
  ports:
  - name: cassandra
    port: 9042
    targetPort: 9042
  - name: redis
    port: 6379
    targetPort: 6379
  - name: postgres
    port: 5433
    targetPort: 5433
  selector:
    app: yb-tserver
  type: ClusterIP
